--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,6 +16,9 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    http_client:
+        default_options:
+            max_redirects: 7
 
 when@test:
     framework:
